<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_overlay"
    tools:context=".InvitedActivity">

    <Button
        android:id="@+id/referral_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto"
        android:padding="15dp"
        android:text="@string/copy_referral_link"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

    <ImageView
        android:id="@+id/referral_banner"
        android:layout_width="1251dp"
        android:layout_height="826dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/banner"
        app:layout_constraintBottom_toTopOf="@+id/referral_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

    <TextView
        android:id="@+id/referral_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/refer_and_share_your_experience_with_everyone"
        android:textColor="#0A1643"
        app:layout_constraintBottom_toTopOf="@+id/referral_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:id="@+id/referral_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/invite"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#0A1542"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/referral_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/referral_button_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dotted_button"
        android:fontFamily="@font/roboto_black"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/xcy0pp"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/referral_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/referral_content"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="@font/roboto"
        android:text="@string/your_referral_code"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/referral_button_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/referral_content"
        app:layout_constraintVertical_bias="1.0"
        tools:laout_editor_absoluteX="149dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/referer_name"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:backgroundTint="#0C1D87"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:textColor="#0C1D87"
        android:textColorHighlight="#08134E"
        android:textColorHint="#0C1D87"
        android:textColorLink="#0A1652"
        android:textCursorDrawable="@null"
        android:onClick="clearname"
        app:layout_constraintBottom_toTopOf="@+id/referral_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/referral_button_code"
        app:layout_constraintVertical_bias="0.657"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/referral_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/referer_name" />

</androidx.constraintlayout.widget.ConstraintLayout>